[package]
name = "pinfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = { version = "0.5.0-rc.2", features = ["tls"] }
bytes = "1"
tokio = { version = "1.21.0", features = ["full"] }
argh = "0.1.8"
pinfish-macros = { path = "../pinfish-macros", version = "0.1.0" }
# async-channel??