[package]
name = "pinfish"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Library for encoding and decoding NFS packets"
exclude = ["examples"]
repository = "https://github.com/ishai42/pinfish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1.26.0", features = ["full"] }
pinfish-macros = { path = "../pinfish-macros", version = "0.1.0-alpha" }

[dev-dependencies]
argp = "0.1"
rand = "0.8.4"